--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -2,7 +2,7 @@
 
 <MudDataGrid T="SeasonDriver" Items="DriverData">
     <Columns>
-        <Column T="SeasonDriver" Field="Number" />
+        <PropertyColumn Property="e => e.Number" />
     </Columns>
 </MudDataGrid>
 
