--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -32,7 +32,7 @@
                 </MudItem>
                 <MudItem xs="12">
                     <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                        <ExampleShared Title="Message for a train-lover" />
+                        la mayo
                     </MudPaper>
                 </MudItem>
             </MudGrid>
