--- a/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonTeams.razor
@@ -4,9 +4,9 @@
 
 <MudDataGrid T="SeasonTeam" Items="TeamData">
     <Columns>
-        <Column T="SeasonTeam" Field="Principal" />
-        <Column T="SeasonTeam" Field="Name" />
-        <Column T="SeasonTeam" Field="Points" />
+        <PropertyColumn Property="e => e.Principal" />
+        <PropertyColumn Property="e => e.Name" />
+        <PropertyColumn Property="e => e.Points" />
     </Columns>
 </MudDataGrid>
 
