--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -13,23 +13,22 @@
     <MudDataGrid T="Driver" Items="@DriverData" ReadOnly="@_readOnly" Bordered="true" Dense="true">
         <Columns>
             <HierarchyColumn T="Driver" />
-            <Column T="Driver" Field="FirstName" />
-            <Column T="Driver" Field="LastName" />
-            <Column T="Driver" Field="Abbreviation" />
-            <Column T="Driver" Field="DateOfBirth" />
-            <Column T="Driver" Field="Country">
+            <PropertyColumn Property="e => e.FullName" />
+            <PropertyColumn Property="e => e.Abbreviation" />
+            <PropertyColumn Property="e => e.DateOfBirth" />
+            <TemplateColumn T="Driver" Field="Country">
                 <CellTemplate>
                     <CountryFlag Code="@context.Item.Country" Size="FlagSize.Small" IncludeName="true" />
                 </CellTemplate>
-            </Column>
-            <Column T="Driver" Field="State" IsEditable="false" />
-            <Column T="Driver" CellClass="d-flex justify-end">
+            </TemplateColumn>
+            <PropertyColumn Property="e => e.State" />
+            <TemplateColumn T="Driver" CellClass="d-flex justify-end">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateDriver(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
-            </Column>
+            </TemplateColumn>
         </Columns>
         <ChildRowContent>
             <MudCard>
