--- a/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantPicker.razor
@@ -6,7 +6,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Entered engines</MudText>
+                <MudText Typo="Typo.h5">Entered engines</MudText>
                 <MudTable T="Engine" Items="@Model.BaseEngines" OnRowClick="RemoveEngine" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">@context.Name</MudTd>
@@ -16,7 +16,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Available engines</MudText>
+                <MudText Typo="Typo.h5">Available engines</MudText>
                 <MudTable T="Engine" Items="@Engines" OnRowClick="EnterEngine" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">@context.Name</MudTd>
@@ -30,7 +30,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Entered teams</MudText>
+                <MudText Typo="Typo.h5">Entered teams</MudText>
                 <MudTable T="Team" Items="@Model.BaseTeams" OnRowClick="RemoveTeam" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -43,7 +43,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Available teams</MudText>
+                <MudText Typo="Typo.h5">Available teams</MudText>
                 <MudTable T="Team" Items="@Teams" OnRowClick="EnterTeam" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -60,7 +60,7 @@
     <MudGrid>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Entered drivers</MudText>
+                <MudText Typo="Typo.h5">Entered drivers</MudText>
                 <MudTable T="Driver" Items="@Model.BaseDrivers" OnRowClick="RemoveDriver" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
@@ -73,7 +73,7 @@
         </MudItem>
         <MudItem xs="6">
             <MudPaper>
-                <MudText>Available drivers</MudText>
+                <MudText Typo="Typo.h5">Available drivers</MudText>
                 <MudTable T="Driver" Items="@Drivers" OnRowClick="EnterDriver" Hover="true">
                     <RowTemplate>
                         <MudTd DataLabel="Name">
